--- a/hw5_NurDin_08-02/index.html
+++ b/hw5_NurDin_08-02/index.html
@@ -28,6 +28,7 @@
             <div id="btn-close">RESTART</div>
         </div>
     </div>
+<!--КЛИКЕР-->
     <h1>!CLICKER!</h1>
     <div class="clicker">
         <button class="button">Increment +</button>
